Always have scrollbar, to avoid mmovement in elements when scroll bar pops in.

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -2,3 +2,7 @@ body {
   font-family: sans-serif;
   background: rgb(238, 238, 238);
 }
+
+html {
+  overflow-y: scroll;
+}
